--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <link rel="stylesheet" type="text/css" href="style.css"></link>
 
 <body>
-<defs>
-  <pattern id="img1" patternUnits="userSpaceOnUse" width="100" height="100">
-    <image xlink:href="Matt_GoldenGate_Picture_Small.jpg" x="0" y="0" width="100" height="100" />
-  </pattern>
-</defs>
+	<svg width="960" height="500">
+	  <defs>
+	    <pattern id="img1" x="10" y="10" patternUnits="userSpaceOnUse" height="100" width="100">
+	      <image x="10" y="10" xlink:href="http://i.imgur.com/7Nlcay7.jpg"></image>
+	    </pattern>
+	  </defs>
+	</svg>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
