--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <meta charset="utf-8">
 <title>Force-Directed Graph</title>
 <link rel="stylesheet" type="text/css" href="style.css"></link>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
 
 <body>
-	<svg width="960" height="500">
-	  <defs>
-	    <pattern id="img1" x="10" y="10" patternUnits="userSpaceOnUse" height="100" width="100">
-	      <image x="10" y="10" xlink:href="http://i.imgur.com/7Nlcay7.jpg"></image>
-	    </pattern>
-	  </defs>
-	</svg>
+	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:ev="http://www.w3.org/2001/xml-events" width="0" height="0">
+    <defs>
+        <pattern id="image" x="-32" y="-32" patternUnits="userSpaceOnUse" height="64" width="64">
+            <image x="0" y="0" height="64" width="64" xlink:href="https://raw.githubusercontent.com/natoparkway/natoparkway.github.io/master/Matt_GoldenGate_Picture_Small.jpg"/>
+        </pattern>
+    </defs>
+</svg>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script src="GraphHelper.js"></script>
+<script src="Utils.js"></script>
 <script src="main-graph.js"></script>
